kubernetes-dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: production
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`k8s.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: forwardauth-geoblock
          namespace: production
        - name: crowdsec-bouncer
          namespace: production
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 80
  tls:
    secretName: $SERVICES_TLS_NAME-tls
